DaemonSET.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    app: elastisearch
  name: elastisearch
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: elastisearch
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: elastisearch
    spec:
      containers:
      - image: k8s.gcr.io/fluentd-elasticsearch:1.20
        name: fluentd-elasticsearch
        resources: {}
