Dep-NodeAffinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: blue
  name: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: blue
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        
      affinity:
        nodeAffinity:
              requiredDuringSchedulingIgnoredDuringExecution:
                      nodeSelectorTerms:
                            - matchExpressions:
                                    - key: color
                                      operator: In
                                      values:
                                         - blue
status: {}
