POD with PVC.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
    - mountPath: /var/www/html
      name: local-ps
  volumes:
  - name: local-ps
    persistentVolumeClaim:
       claimName: local-pvc
