Pod-Resource LIMIT.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: elephant
  name: elephant
spec:
  containers:
  - image: polinux/stress
    name: elephant
    resources:
        requests:
          memory: "20Mi"
        limits:
          memory: "20Mi"  
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
