Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project1-service
  labels:
    app: project1
spec:
  type: LoadBalancer
  selector:
    app: project1
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080  #Containers exposed port
      targetPort: 80  # Pods port
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 31200
